<resources>
    <string name="app_name">Big Buzzer Quiz</string>


    <!-- Start Activity -->
    <string name="title_activity_start">Big Buzzer Quiz </string>
    <string name="name_hint">What is your name?</string>
    <string name="choseMode"> Please chose your mode </string>
    <string name="masterDescription"> The Master Mode adds the other players, sets up the game and starts it.
        The master can play the quiz as well. You need exactly one person with master mode per game. </string>
    <string name="playerDescription"> The Player plays the game without setting up anything.
        You press this button and wait until the master starts the game.  </string>

    <!-- Master Activity -->
    <string name="message_instructions">You can add players that are in the same Wi-Fi Direct network as you to a game.</string>
    <string name="peers_label">Peers:</string>
    <string name="action_settings">Settings</string>
    <string name="action_discover">Discover peers</string>
    <string name="message_group_owner">You are the group owner</string>
    <string name="message_not_group_owner">You are not the group owner</string>
    <string name="button_new_game">Continue</string>
    <string name="button_scan_wifi">Scan WiFi</string>
    <string name="label_scan_wifi">Scanning WiFi</string>
    <string name="label_selected_players">Players:</string>

    <!-- Activity Master Setup -->
    <string name="title_activity_master_setup">Set up a Game</string>
    <string name="checkboxArt">Art and Culture</string>
    <string name="checkboxScience"> Science </string>
    <string name="checkboxGeography"> Geography </string>
    <string name="questionAmount">Amount of questions:</string>
    <string name="choseCategories">Chose your categories:</string>
    <string name="startGame">Start Game</string>


    <!-- For the Database -->
     <string name="createTableQuestionsQuery">
        CREATE TABLE IF NOT EXISTS Questions(
         Question VARCHAR,
         Answer0 VARCHAR,
         Answer1 VARCHAR,
         Answer2 VARCHAR,
         Answer3 VARCHAR,
         rightAnswer INTEGER,
         Category INTEGER REFERENCES Categories (rowid)
         );
    </string>
    <string name="dropTableQuestionsQuery">
        DROP IF TABLE EXISTS Questions;
    </string>
    <string name="createTableCategoriesQuery">
        CREATE TABLE IF NOT EXISTS Categories(
        Name VARCHAR
        );
    </string>
    <string name="dropTableCategoriesQuery">
        DROP IF TABLE EXISTS Categories
    </string>

    <!-- Start Player Activity -->
    <string name="title_activity_start_player">StartPlayerActivity</string>

    <!-- Turn Activity -->
    <string name="title_activity_question_activity">QuestionActivity</string>
    <string name="title_activity_main">This is the big one</string>
    <string name="hello_world">Hello world!</string>


    <!--- Start Player Activity -->
    <string name="playerHint"> Please wait for the master player to start the game.  </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ruleHeading">While you wait, you can take a look at the rules:</string>
    <string name="rules">
        Every player will see a question at the same time.
        The one who clicks the right answer first will gain a point.
        \nIf you chose the wrong answer, you lose a point and are not allowed to give an answer to this question again.
        \nThere is a Timer of 10seconds for every question. If it is over, you are not allowed to answer to this question anymore.
    </string>
    <string name="listPlayersHint">Here is a list of players that are already registert (by clicking Player). If you see everyone you want to play with, you can Start the Game</string>
    <string name="title_activity_enter_name">EnterNameActivity</string>

    <!-- Enter Name Activity -->
    <string name="welcomeString">Welcome to this awesome game!</string>
    <string name="welcomeManual">
        This is a multiplayer quiz game. You connect your device via an amazing technology
        called WiFi Direct to other devices around you. (You have to enable your WiFiDirect Settings first.)
        \n\nInsert your name and press the button to connect to other devices and set up the game.

    </string>


</resources>
