<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.brocku.cosc3p97.bigbuzzerquiz.views.EnterNameActivity"
    android:orientation="vertical">

    <TextView android:text="@string/welcomeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultHeadingSize"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/defaultHintSize"
        android:text="@string/welcomeManual"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name_hint"
        android:gravity="clip_vertical"
        android:textSize="@dimen/defaultTextSize"
        android:backgroundTint="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goOn"
        android:text="Let's do this"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/defaultButtonSize"/>

</LinearLayout>
