<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.brocku.cosc3p97.bigbuzzerquiz.views.StartActivity">

    <TextView
        android:text="@string/choseMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultHeadingSize"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/masterButton"
        android:onClick="choseMasterMode"
        android:text="Master"
        android:textSize="@dimen/defaultButtonSize"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/defaultHintSize"
        android:text="@string/masterDescription"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/playerButton"
        android:onClick="chosePlayerMode"
        android:text="Player"
        android:textSize="@dimen/defaultButtonSize"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/defaultHintSize"
        android:text="@string/playerDescription"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Wi-Fi Setup"
        android:textSize="@dimen/defaultButtonSize"
        android:id="@+id/wiFiSetupButton" />

</LinearLayout>
